<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/global_bg"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="22dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/btn_cancel_txt"
            android:textColor="@color/voice_txt_color"
            android:textSize="16dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/btn_reset_txt"
            android:textColor="@color/voice_txt_color"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:paddingLeft="@dimen/listitem_left"
        android:paddingRight="@dimen/listitem_right"
        android:text="@string/voice_verify_1txt"
        android:textColor="@color/txt_listitem_title"
        android:textSize="20dp"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingLeft="@dimen/listitem_left"
        android:paddingRight="@dimen/listitem_right"
        android:text="@string/voice_verify_2txt"
        android:textColor="@color/txt_listitem_title"
        android:textSize="20dp"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:paddingLeft="@dimen/listitem_left"
        android:paddingRight="@dimen/listitem_right"
        android:text="@string/voice_say_content_txt"
        android:textColor="@color/txt_listitem_title"
        android:textSize="40dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:paddingLeft="@dimen/listitem_left"
        android:paddingRight="@dimen/listitem_right"
        android:text="@string/voice_say_error_1txt"
        android:textColor="@color/red"
        android:textSize="16dp"
        android:visibility="invisible" />

    <com.example.voicerecognition.utils.BaseLoadingView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:alpha="0.7"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/voice_say_btn" />

</LinearLayout>