<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/voice_step2_cancel_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="22dp"
        android:padding="8dp"
        android:text="@string/btn_cancel_txt"
        android:textColor="@color/voice_txt_color"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:paddingLeft="@dimen/listitem_left"
        android:paddingRight="@dimen/listitem_right"
        android:text="@string/voice_say_desc_txt"
        android:textColor="@color/txt_listitem_title"
        android:textSize="20dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/voice_step2_say_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:paddingLeft="@dimen/listitem_left"
        android:paddingRight="@dimen/listitem_right"
        android:text="@string/voice_say_content_txt"
        android:textColor="@color/txt_listitem_title"
        android:textSize="40dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/voice_step2_error_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:paddingLeft="@dimen/listitem_left"
        android:paddingRight="@dimen/listitem_right"
        android:text="@string/voice_say_error_1txt"
        android:textColor="@color/red"
        android:textSize="16dp"
        android:visibility="invisible" />

    <com.example.voicerecognition.utils.BaseLoadingView
        android:id="@+id/voice_step2_loading"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:alpha="0.7"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ImageView
            android:id="@+id/voice_step2_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/say_desc_txt"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/voice_step2_say_btn_halo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="-15dp"
            android:layout_below="@+id/voice_step2_tip"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            android:background="@drawable/voice_say_btn_out" >

            <View
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/voice_say_btn_in" />
        </RelativeLayout>

        <Button
            android:id="@+id/voice_step2_say_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:visibility="visible"
            android:layout_below="@+id/voice_step2_tip"
            android:layout_centerHorizontal="true"
            android:background="@drawable/voice_say_btn" />
    </RelativeLayout>

</LinearLayout>